--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -10,6 +10,6 @@
 
   "frontend_url": "http://localhost:4200",
   "connectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-SJKPFV7\\SQLEXPRESS;Initial Catalog=MoviesAPI;Integrated Security=True"
+    "DefaultConnection": "Data Source= Here Enter Server Name ;Initial Catalog=MoviesAPI;Integrated Security=True"
   }
 }
